finish code style check